_SC_WOND: makeNewBoard: Build Layout Part AL with node lists N1,N2,N3; add their edges for init placement; javadocs